# loreboot

./: Cargo.toml  README.md  log_pools.json  world.json  world2.json
man/man1/: examine.1  go.1  inventory.1  look.1  lore.1  quests.1  scan.1  status.1  talk.1  use.1
man/man5/: endings.5  items.5  lore.5  quests.5  traits.5
src/: battle.rs  commands.rs  game.rs  main.rs  music.rs  player.rs  quest.rs  structs.rs  world.rs
src/ui/: prompt.rs
