[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
rand = "0.9.0"
reedline = "0.39.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.10", features = ["json"] }
uuid = { version = "1.16.0", features = ["v7"] }
